# hwcodec

./: .gitignore  Cargo.toml  README.md  build.rs
cpp/common/: uitl.h  util.cpp
cpp/ffmpeg_ram/: ffmpeg_ram_encode.cpp
cpp/ffmpeg_vram/: ffmpeg_vram_encode.cpp
examples/: available1.rs  pipeline_vram.rs
